--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
       },
       "outputs": [],
       "source": [
-        "colab = False\n",
+        "colab = True\n",
         "\n",
         "import torch\n",
         "import os \n",
@@ -50,23 +50,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'Planetoid' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dataset \u001b[39m=\u001b[39m Planetoid(root\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m../cora\u001b[39m\u001b[39m'\u001b[39m, name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCora\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m data \u001b[39m=\u001b[39m dataset[\u001b[39m0\u001b[39m]\n\u001b[0;32m      4\u001b[0m test_prop \u001b[39m=\u001b[39m \u001b[39m0.2\u001b[39m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'Planetoid' is not defined"
+          ]
+        }
+      ],
       "source": [
         "dataset = Planetoid(root='../cora', name='Cora')\n",
         "data = dataset[0]\n",
         "\n",
-        "train_idx = data.train_mask.to(device)\n",
-        "val_idx = data.val_mask.to(device)\n",
-        "test_idx = data.test_mask.to(device)\n",
+        "test_prop = 0.2\n",
+        "train_idx = torch.tensor(np.random.binomial(1, 1-test_prop, size=data.y.shape[0])).astype(bool).to(device)\n",
+        "test_idx = torch.tensor(np.logical_not(train_idx)).astype(bool).to(device)\n",
         "\n",
         "Gnx = nx.from_pandas_edgelist(pd.DataFrame(data['edge_index'].T,\n",
         "                                           columns=['source', 'target']))\n",
         "Gnx = Gnx.to_undirected()\n",
         "\n",
         "# Exctract adjacency matrix\n",
-        "A = nx.adjacency_matrix(Gnx).toarray()"
+        "A = nx.adjacency_matrix(Gnx).toarray()\n",
+        "data = data.to(device)"
       ]
     },
     {
