--- a/main.ipynb
+++ b/main.ipynb
@@ -50,28 +50,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'Planetoid' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dataset \u001b[39m=\u001b[39m Planetoid(root\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m../cora\u001b[39m\u001b[39m'\u001b[39m, name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCora\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m data \u001b[39m=\u001b[39m dataset[\u001b[39m0\u001b[39m]\n\u001b[0;32m      4\u001b[0m test_prop \u001b[39m=\u001b[39m \u001b[39m0.2\u001b[39m\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'Planetoid' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "dataset = Planetoid(root='../cora', name='Cora')\n",
         "data = dataset[0]\n",
         "\n",
         "test_prop = 0.2\n",
-        "train_idx = torch.tensor(np.random.binomial(1, 1-test_prop, size=data.y.shape[0])).astype(bool).to(device)\n",
-        "test_idx = torch.tensor(np.logical_not(train_idx)).astype(bool).to(device)\n",
+        "train_idx = torch.tensor(np.random.binomial(1, 1-test_prop, size=data.y.shape[0])).to(bool)\n",
+        "test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n",
+        "train_idx = train_idx.to(device)\n",
         "\n",
         "Gnx = nx.from_pandas_edgelist(pd.DataFrame(data['edge_index'].T,\n",
         "                                           columns=['source', 'target']))\n",
@@ -109,9 +98,9 @@
         "    'device': device,\n",
         "    'hidden_layers': 1,\n",
         "    'hidden_dim': 264,\n",
-        "    'dropout': 0.5,\n",
+        "    'dropout': 0.3,\n",
         "    'lr': 3e-4,\n",
-        "    'epochs': 3,\n",
+        "    'epochs': 100,\n",
         "    'trans_matrix': Lsym\n",
         "}"
       ]
