--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "BGcxZqVSKqBT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BGcxZqVSKqBT",
+        "outputId": "e0b47720-9f4f-4d38-d0c8-612cef60e53b"
       },
       "outputs": [],
       "source": [
@@ -41,9 +45,10 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "yZ5osB7ONHje"
+      },
       "source": [
         "# 1 Cora"
       ]
@@ -51,7 +56,13 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Ms7M0izNHjg",
+        "outputId": "6c97906d-6c29-4ab4-e619-b57713fc1d45"
+      },
       "outputs": [],
       "source": [
         "dataset = Planetoid(root='../cora', name='Cora')\n",
@@ -73,7 +84,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "U6XzVxtENHjh"
+      },
       "source": [
         "### 1.1 Laplacian matrix"
       ]
@@ -81,7 +94,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "erC5X1k6NHjh"
+      },
       "outputs": [],
       "source": [
         "Lsym = compute_Lsym(A)\n",
@@ -91,7 +106,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "vmsuqARsNHjh"
+      },
       "outputs": [],
       "source": [
         "args = {\n",
@@ -108,7 +125,13 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mo0MZ4PQNHji",
+        "outputId": "ee96cdcb-22f2-4a8d-b339-048dd3fb873d"
+      },
       "outputs": [],
       "source": [
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
@@ -133,7 +156,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "54IYcpLGNHjj"
+      },
       "outputs": [],
       "source": [
         "Lrw = compute_Lrw(A)\n",
@@ -144,7 +169,13 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P4hHfdUaNHjj",
+        "outputId": "7ad99e1c-7dc8-4d4b-acdb-0db5c99904fa"
+      },
       "outputs": [],
       "source": [
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
@@ -167,9 +198,10 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "NU1lOaO0NHjk"
+      },
       "source": [
         "### 1.2 Page rank"
       ]
@@ -177,17 +209,35 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Owm4IW40NHjl"
+      },
       "outputs": [],
       "source": [
         "pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
-        "pagerank = torch.from_numpy(pagerank).float().to(device)"
+        "pagerank = torch.from_numpy(pagerank).float().to(device)\n",
+        "\n",
+        "args = {\n",
+        "    'device': device,\n",
+        "    'hidden_layers': 1,\n",
+        "    'hidden_dim': 264,\n",
+        "    'dropout': 0.3,\n",
+        "    'lr': 3e-4,\n",
+        "    'epochs': 200,\n",
+        "    'trans_matrix': pagerank\n",
+        "}"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bTepgU1dNHjm",
+        "outputId": "74aaab2e-3a8d-4669-b84e-117c7ad5218f"
+      },
       "outputs": [],
       "source": [
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
@@ -211,7 +261,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "6esaq6BhNHjn"
+      },
       "source": [
         "### 1.3 Heat"
       ]
@@ -219,18 +271,27 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "210cutP4NHjn"
+      },
       "outputs": [],
       "source": [
         "heat = gdc_heat(A, 3, 10, 1e-4)\n",
         "heat = torch.from_numpy(heat).float().to(device)\n",
+        "\n",
         "args['trans_matrix'] = heat"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fTYOQUJGNHjo",
+        "outputId": "5f30d466-7bce-4235-d8fd-6cd45b991b85"
+      },
       "outputs": [],
       "source": [
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
@@ -251,6 +312,15 @@
         "        f'Train: {100*train_acc:.2f}%, '\n",
         "        f'Test: {100*test_acc:.2f}%')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "59A0ArlMOdTG"
+      },
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
