--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,7 +10,15 @@
         "id": "BGcxZqVSKqBT",
         "outputId": "e0b47720-9f4f-4d38-d0c8-612cef60e53b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "device: cpu\n"
+          ]
+        }
+      ],
       "source": [
         "colab = False\n",
         "\n",
@@ -34,6 +42,7 @@
         "import pandas as pd\n",
         "import math as math\n",
         "from torch_geometric.datasets import Planetoid\n",
+        "from torch_geometric.transforms.gdc import GDC\n",
         "from torch.nn.functional import nll_loss\n",
         "\n",
         "from matrix_format import gdc_pagerank, gdc_heat, compute_Lsym, compute_Lrw\n",
@@ -46,6 +55,27 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 0 "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "yZ5osB7ONHje"
       },
@@ -55,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +93,16 @@
         "id": "9Ms7M0izNHjg",
         "outputId": "6c97906d-6c29-4ab4-e619-b57713fc1d45"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\33646\\AppData\\Local\\Temp\\ipykernel_30784\\351346556.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "  test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n"
+          ]
+        }
+      ],
       "source": [
         "dataset = Planetoid(root='../cora', name='Cora')\n",
         "data = dataset[0]\n",
@@ -80,6 +119,75 @@
         "# Exctract adjacency matrix\n",
         "A = nx.adjacency_matrix(Gnx).toarray()\n",
         "data = data.to(device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "gdc = GDC()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2708"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data.num_nodes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "edge_index, edge_weight = GDC.transition_matrix(None, edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "                                                num_nodes=data.num_nodes, normalization='sym')            "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[1.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 1.0000, 0.2582,  ..., 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.2582, 1.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+            "        ...,\n",
+            "        [0.0000, 0.0000, 0.0000,  ..., 1.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 1.0000, 0.2500],\n",
+            "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.2500, 1.0000]])\n"
+          ]
+        }
+      ],
+      "source": [
+        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes))\n",
+        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "\n",
+        "trans_matrix.fill_diagonal_(1)\n",
+        "trans_matrix = trans_matrix.to(device)\n",
+        "\n",
+        "# Print the adjacency matrix\n",
+        "print(trans_matrix)"
       ]
     },
     {
@@ -334,28 +442,14 @@
         "dataset = Amazon(root='../cora', name='Computers')\n",
         "data = dataset[0]\n",
         "\n",
-        "test_prop = 0.2\n",
-        "train_idx = torch.tensor(np.random.binomial(1, 1-test_prop, size=data.y.shape[0])).to(bool)\n",
-        "test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n",
-        "train_idx = train_idx.to(device)\n",
-        "\n",
-        "# Create networkx graph from node list only\n",
-        "\n",
         "Gnx = nx.Graph()\n",
         "Gnx.add_nodes_from(range(data.x.shape[0]))\n",
         "\n",
         "# Convert edge_index tensor to a list of edge tuples\n",
         "edges = torch.t(data.edge_index).tolist()\n",
         "Gnx.add_edges_from(edges)\n",
-        "Gnx = Gnx.to_undirected()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "Gnx = Gnx.to_undirected()\n",
+        "\n",
         "isolated_nodes = list(nx.isolates(Gnx))\n",
         "Gnx.remove_nodes_from(isolated_nodes)\n",
         "\n",
@@ -366,8 +460,39 @@
         "\n",
         "data.x = data.x[list(mapping.values())]\n",
         "data.y = data.y[list(mapping.values())]\n",
+        "data = data.to(device)\n",
         "\n",
-        "data = data.to(device)"
+        "test_prop = 0.2\n",
+        "train_idx = torch.tensor(np.random.binomial(1, 1-test_prop, size=data.y.shape[0])).to(bool)\n",
+        "test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n",
+        "train_idx = train_idx.to(device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(13471, 13471)"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "A.shape"
       ]
     },
     {
