--- a/main.ipynb
+++ b/main.ipynb
@@ -123,41 +123,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "gdc = GDC()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 35,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "2708"
-            ]
-          },
-          "execution_count": 35,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "data.num_nodes"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
-        "edge_index, edge_weight = GDC.transition_matrix(None, edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
-        "                                                num_nodes=data.num_nodes, normalization='sym')            "
+        "  "
       ]
     },
     {
@@ -179,16 +149,7 @@
           ]
         }
       ],
-      "source": [
-        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes))\n",
-        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
-        "\n",
-        "trans_matrix.fill_diagonal_(1)\n",
-        "trans_matrix = trans_matrix.to(device)\n",
-        "\n",
-        "# Print the adjacency matrix\n",
-        "print(trans_matrix)"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -322,8 +283,18 @@
       },
       "outputs": [],
       "source": [
-        "pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
-        "pagerank = torch.from_numpy(pagerank).float().to(device)\n",
+        "# pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
+        "# pagerank = torch.from_numpy(pagerank).float().to(device)\n",
+        "\n",
+        "gdc = GDC(diffusion_kwargs = dict(method='ppr', alpha=0.15))\n",
+        "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "                                                num_nodes=data.num_nodes, normalization='sym').to(device)     \n",
+        "\n",
+        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
+        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "\n",
+        "trans_matrix.fill_diagonal_(1)\n",
+        "pagerank = trans_matrix.to(device)\n",
         "\n",
         "args = {\n",
         "    'device': device,\n",
